examples/33-aws-eks-ecomm-3/App/shoppingportal-ing-aws.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: workshop-ingress
  namespace: shoppingportal
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  rules:
  - http:
      paths:
      - path: /ui/*
        backend:
          serviceName: ms-sp-ui-svc
          servicePort: 80
      - path: /product-service/*
        backend:
          serviceName: product-service
          servicePort: 80
      - path: /product-review-service/*
        backend:
          serviceName: product-review-service
          servicePort: 80
      - path: /payment-service/*
        backend:
          serviceName: payment-service
          servicePort: 80 
      - path: /user-svc/*
        backend:
          serviceName: user-svc
          servicePort: 80 
      - path: /order-service/*
        backend:
          serviceName: order-service
          servicePort: 80  
      - path: /shopping-cart-cmd-service/*
        backend:
          serviceName: shopping-cart-cmd-service
          servicePort: 80 
      - path: /shopping-cart-query-service/*
        backend:
          serviceName: shopping-cart-query-service
          servicePort: 80     
      - path: /zipkin-svc/*
        backend:
          serviceName: zipkin-svc
          servicePort: 80
